--- a/scalable_server/manifest.yaml
+++ b/scalable_server/manifest.yaml
@@ -17,3 +17,5 @@ spec:
       containers:
       - name: scalable-server
         image: lumeche/scalable-server:latest      
+        ports:
+        - containerPort: 8081
