--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,22 +1,21 @@
+#Service monitor to make prometheus grab the metrics from the metrics-server. 
+apiVersion: monitoring.coreos.com/v1alpha1
 kind: ServiceMonitor
 metadata:
   labels:
     service-monitor: function
   name: custom-metrics
-  namespace: default
 spec:
   endpoints:
   - port: web
-    path: /prometheus
   namespaceSelector:
-    matchNames:
-    - luist
+    any: true
   selector:
     matchLabels:
       app: custom-metrics
 
 
-
+#The actual HPA that makes scale the scalable-server.
 ################
 kind: HorizontalPodAutoscaler
 apiVersion: autoscaling/v2alpha1
